# GenerativeAI-Learn

./: README.md  main.py  pyproject.toml  requirements.txt
dataIngestParsing/: dataIngestion.ipynb  dataParsingCsv.ipynb  dataParsingDoc.ipynb  dataParsingPdf.ipynb  smartPdf.ipynb
dataIngestParsing/data/structured_files/: data.xlsx
dataIngestParsing/data/text_files/: file1.txt  file2.txt  file3.txt
